--- a/Polokwane_surf.Server/appsettings.json
+++ b/Polokwane_surf.Server/appsettings.json
@@ -1,32 +1,32 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    //"Smtp": {
-    //    "Host": "smtp.yourhost.com",
-    //    "Port": 587,
-    //    "Username": "your_username",
-    //    "Password": "your_password",
-    //    "From": "no-reply@polokwanesurfacing.co.za",
-    //    "EnableSsl": true
-    //},
-    "Smtp": {
-        "Host": "smtp.gmail.com",
-        "Port": 587,
-        "Username": "lethabo.learn1@gmail.com",
-        "Password": "your-app-password-here",
-        "From": "lethabo.learn1@gmail.com",
-        "EnableSsl": true
-    },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  //"Smtp": {
+  //  "Host": "sandbox.smtp.mailtrap.io",
+  //  "Port": 2525,
+  //  "Username": "279cd3d2f25081",
+  //  "Password": "2354b7b013a282",
+  //  "From": "lethabo.learn1@gmail.com",
+  //  "EnableSsl": true
+  //},
+  "Smtp": {
+    "Host": "sandbox.smtp.mailtrap.io",
+    "Port": 2525,
+    "Username": "lethabo.learn1@gmail.com",
+    "Password": "jwya eqph dalv drzn",
+    "From": "lethabo.learn1@gmail.com",
+    "EnableSsl": true
+  },
 
-    "Twilio": {
-        "AccountSid": "your_twilio_sid",
-        "AuthToken": "your_twilio_auth_token",
-        "FromPhone": "+123456789"
-    },
+  "Twilio": {
+    "AccountSid": "your_twilio_sid",
+    "AuthToken": "your_twilio_auth_token",
+    "FromPhone": "+123456789"
+  },
 
-    "AllowedHosts": "*"
+  "AllowedHosts": "*"
 }
