--- a/Polokwane_surf.Server/appsettings.json
+++ b/Polokwane_surf.Server/appsettings.json
@@ -23,9 +23,9 @@
   },
 
   "Twilio": {
-    "AccountSid": "your_twilio_sid",
-    "AuthToken": "your_twilio_auth_token",
-    "FromPhone": "+123456789"
+    "AccountSid": "AC8defc58c830564fa6b66a252eed116a0",
+    "AuthToken": "e31b8295b565391ad101c7639f815faa",
+    "FromPhone": "+1234567890"
   },
 
   "AllowedHosts": "*"
