--- a/Polokwane_surf.Server/appsettings.json
+++ b/Polokwane_surf.Server/appsettings.json
@@ -22,11 +22,11 @@
     "EnableSsl": true
   },
 
-  "Twilio": {
-    "AccountSid": "AC8defc58c830564fa6b66a252eed116a0",
-    "AuthToken": "e31b8295b565391ad101c7639f815faa",
-    "FromPhone": "+1234567890"
-  },
+  //"Twilio": {
+  //  "AccountSid": "AC8defc58c830564fa6b66a252eed116a0",
+  //  "AuthToken": "e31b8295b565391ad101c7639f815faa",
+  //  "FromPhone": "+1234567890"
+  //},
 
   "AllowedHosts": "*"
 }
