--- a/Polokwane_surf.Server/appsettings.json
+++ b/Polokwane_surf.Server/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;database=polokwane_surf;user=root;password=Aretse@1221"
+  },
+
   //"Smtp": {
   //  "Host": "sandbox.smtp.mailtrap.io",
   //  "Port": 2525,
@@ -21,7 +25,6 @@
     "From": "lethabo.learn1@gmail.com",
     "EnableSsl": true
   },
-
   //"Twilio": {
   //  "AccountSid": "AC8defc58c830564fa6b66a252eed116a0",
   //  "AuthToken": "e31b8295b565391ad101c7639f815faa",
